# Mini-FT8

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TRUSDX_CONNECT_ISSUE.md  TRUSDX_DISPLAY_ISSUE.md  TRUSDX_FACTS.md  TRUSDX_RX_STATUS.md  partitions.csv  sdkconfig
components/ch340_usb_serial/: CMakeLists.txt  ch340_usb_serial.cpp
components/ch340_usb_serial/include/: ch340_usb_serial.h
components/ft8_lib/common/: monitor.c
components/ui/: ui.cpp
components/ui/include/: ui.h
docs/: AUTOSEQ_INACTIVE_QUEUE.md  HANDOVER_NATIVE_CLIENT.md  NATIVE_CLIENT_ARCHITECTURE.md  OPERATION_MODES.md
docs/superpowers/plans/: 2026-05-26-trusdx-backend.md  2026-06-09-trusdx-reliability.md
docs/superpowers/specs/: 2026-05-26-trusdx-backend-design.md
host_mock/: .gitignore  Makefile  host_main.cpp  host_mocks.cpp  test_beacon_lifecycle.json  test_freetext.json  test_ft8_synth.cpp  test_ft8_synth_fixtures.h
main/: CMakeLists.txt  audio_source.cpp  audio_source.h  audio_trusdx_serial.cpp  audio_trusdx_serial.h  autoseq.cpp  autoseq.h  ble_native.cpp  ble_native.h  core_api.cpp  ft8_audio_pipeline.cpp  ft8_tx_synth.cpp  idf_component.yml  main.cpp  protocol.h  radio_control.cpp  radio_control.h  radio_control_backend.h  radio_control_kh1_cat.cpp  radio_control_qmx.cpp  radio_trusdx.cpp  resample.cpp  resample.h  station_types.h  stream_mic.cpp  stream_uac.cpp  stream_uac.h
tests/tx_e2e/: test_ta_format.cpp
tests/tx_e2e/golden/: MANIFEST.txt
tools/: check_dram_budget.py  ft8_synth_reference.py  run_uac_test.py
